# android-tool

./: .gitignore  README.md  pyproject.toml
docs/: app-export.md  app-list.md  emulator-probe.md  spine-extract.md  uf-extract.md  video-extract.md
spine-player/: index.html  package-lock.json  package.json  vite.config.js
spine-player/src/: main.js  style.css
src/android_tool/: __init__.py  __main__.py  cli.py
src/android_tool/core/: __init__.py  adb.py  network.py
src/android_tool/tools/: __init__.py  adb_connect.py  apk_install.py  app_control.py  app_export.py  app_inspect.py  app_list.py  app_log.py  emulator_probe.py  spine_extract.py  uf_extract.py  video_extract.py
tests/: test_app_export.py  test_app_list.py  test_emulator_probe.py  test_new_tools.py  test_spine_extract.py  test_uf_extract.py  test_video_extract.py
